qualia_derive/tests/compile-fail/only-supported-field-types.stderr
error: fields in ObjectShape must be i64 or String
 --> $DIR/only-supported-field-types.rs:7:8
  |
7 |     b: f64,
  |        ^^^

error: fields in ObjectShape must be i64 or String
  --> $DIR/only-supported-field-types.rs:14:8
   |
14 |     b: &'a str,
   |        ^^^^^^^
